Fix about timeline image clipping and scaling in circular frames

--- a/css/styles.css
+++ b/css/styles.css
@@ -11107,6 +11107,13 @@ header.masthead .masthead-heading {
   border: 7px solid #e9ecef;
   border-radius: 100%;
   background-color: #ffc800;
+  overflow: hidden;
+}
+.timeline > li .timeline-image img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 .timeline > li .timeline-image h4, .timeline > li .timeline-image .h4 {
   font-size: 10px;
